Update flags performance boost